# deepx_core

./: .clang-tidy  CPPLINT.cfg  LICENSE  Makefile  Makefile.3rd  Makefile.rule  README.md  install.sh
doc/: compilation.md  feature.md  graph.md  graph_engine.md  hdfs.md  instance.md  instance_reader.md  op_dev.md  op_manual.md  optimizer.md  tensor.md
doc/pic/: .gitattributes  graph_arch.pptx  graph_engine_offline_arch.pptx  graph_engine_online_arch.pptx  instance_reader_arch.pptx  instance_reader_libsvm.pptx  instance_reader_libsvm_ex.pptx  instance_reader_uch.pptx  op_dev_op_context.pptx  op_manual_graph_example.pptx  optimizer_arch.pptx
example/: Makefile
example/computation/: Makefile  README.md  example1_main.cc  example2_main.cc  example3_main.cc  example4_main.cc  example5_main.cc
example/rank/: Makefile  README.md  dist_flags.cc  dist_flags.h  dist_server.cc  dist_trainer_main.cc  dist_worker.cc  model_server.cc  model_server.h  model_server_demo_main.cc  model_zoo.h  model_zoo_impl.cc  model_zoo_impl.h  predictor_main.cc  trainer_context.cc  trainer_context.h  trainer_main.cc
example/rpc/: Makefile  echo_client_main.cc  echo_proto.h  echo_server_main.cc
include/deepx_core/: dx_gtest.h  dx_log.h  dx_version.h
mmsearchgateway/: BUILD  build_config.bzl
sage2/: .clang-format  .gitignore  CPPLINT.cfg  Makefile  README.md
sage2/doc/: api.md
sage2/script/: BUILD.bazel  BUILD.mmsearchgateway  Makefile.rule.openblas  export.txt  install.sh
sage2/src/: benchmark.h  cblas_adapter.c  cpuid.c  cpuid_asm.S  cpuid_test.c  eigen_wrapper.h  half_asm.S  half_test.cc  internal_macro.h  memcpy.cc  memcpy_test.cc  xbyak_wrapper.h
script/: build_config.bzl.mmsearchgateway  compile_flags.sh  install.sh
src/: dx_log.cc
src/common/: any_map.cc  any_map_test.cc  any_test.cc  array_view_test.cc  blocking_queue_test.cc  class_factory_test.cc  class_factory_test.h  class_factory_test_a.cc  class_factory_test_b.cc  class_factory_test_c.cc  class_factory_test_d.cc  compress.cc  compress_test.cc  hash.cc  (+17 more)
vcproj/: debug.props  deepx_core.sln  libdeepx_core.vcxproj  libdeepx_core.vcxproj.filters  libfeature.vcxproj  libgflags.vcxproj  libgtest.vcxproj  liblz4.vcxproj  libz.vcxproj  release.props  unit_test.vcxproj  unit_test.vcxproj.filters
(+429 files in other folders)
